--- a/assignment/14-final/index.html
+++ b/assignment/14-final/index.html
@@ -30,8 +30,8 @@
   
     
   
-  <meta name="description" content="Final Project  Presentation (5 minutes): Wednesday November 30th, 2022
- Written report (single spaced, 6-8 pages where 3-4 pages are tables and figures): Wednesday December 7, 2022
+  <meta name="description" content="Final Project   Presentation (5 minutes): Wednesday November 30th, 2022
+  Written report (single spaced, 6-8 pages where 3-4 pages are tables and figures): Wednesday December 7, 2022
   Learning Objective: To apply the skills learned in PM 566 by analyzing and interpreting a dataset of your choice.
 Narrative: Through this project you will launch a portfolio of data science projects that will become seminal for your job hunt.">
 
@@ -248,8 +248,8 @@ Narrative: Through this project you will launch a portfolio of data science proj
   <meta property="og:site_name" content="Introduction to Health Data Science - PM 566">
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/assignment/14-final/">
   <meta property="og:title" content="Final Project | Introduction to Health Data Science - PM 566">
-  <meta property="og:description" content="Final Project  Presentation (5 minutes): Wednesday November 30th, 2022
- Written report (single spaced, 6-8 pages where 3-4 pages are tables and figures): Wednesday December 7, 2022
+  <meta property="og:description" content="Final Project   Presentation (5 minutes): Wednesday November 30th, 2022
+  Written report (single spaced, 6-8 pages where 3-4 pages are tables and figures): Wednesday December 7, 2022
   Learning Objective: To apply the skills learned in PM 566 by analyzing and interpreting a dataset of your choice.
 Narrative: Through this project you will launch a portfolio of data science projects that will become seminal for your job hunt."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
@@ -529,14 +529,14 @@ Narrative: Through this project you will launch a portfolio of data science proj
   <div class="article-container">
 
     <div class="article-style">
-      
-
-
-<div id="final-project" class="section level1">
-<h1>Final Project</h1>
+      <h1 id="final-project">Final Project</h1>
 <ul>
-<li><p>Presentation (5 minutes): Wednesday November 30th, 2022</p></li>
-<li><p>Written report (single spaced, 6-8 pages where 3-4 pages are tables and figures): Wednesday December 7, 2022</p></li>
+<li>
+<p>Presentation (5 minutes): Wednesday November 30th, 2022</p>
+</li>
+<li>
+<p>Written report (single spaced, 6-8 pages where 3-4 pages are tables and figures): Wednesday December 7, 2022</p>
+</li>
 </ul>
 <p><strong>Learning Objective</strong>: To apply the skills learned in
 PM 566 by analyzing and interpreting a dataset of your choice.</p>
@@ -563,54 +563,74 @@ tables and figures from your analysis, refer to your website if needed),
 and a brief <strong>Conclusion and Summary</strong> where
 you describe your findings.</p>
 <p>In your report, please do not include code (so make sure
-<code>echo = FALSE</code>), unformatted output, or dataset summaries (e.g. output
+<code>echo = FALSE</code>), unformatted output, or dataset summaries (e.g. output
 from head(), str(), etc.)</p>
-<div id="checklist-for-final-project" class="section level2">
-<h2>Checklist for Final Project</h2>
-<ol style="list-style-type: decimal">
-<li><p><span dir="ltr"><strong>Create a website</strong> (HTML document and all the
+<h2 id="checklist-for-final-project">Checklist for Final Project</h2>
+<ol>
+<li>
+<p><span dir="ltr"><strong>Create a website</strong> (HTML document and all the
 required files, including figures). It should feature:</span></p>
-<ol style="list-style-type: decimal">
-<li><p><span dir="ltr">A brief description of the project,</span></p></li>
-<li><p><span dir="ltr">Interactive visualizations, also with a
+<ol>
+<li>
+<p><span dir="ltr">A brief description of the project,</span></p>
+</li>
+<li>
+<p><span dir="ltr">Interactive visualizations, also with a
 description so that people can understand what they are
-looking at, and</span></p></li>
-<li><p><span dir="ltr">A link to the PDF version of the actual report
-(i.e. a link to “Download the report.”).</span></p></li>
-<li><p><span dir="ltr">Your home page should feature no more than
+looking at, and</span></p>
+</li>
+<li>
+<p><span dir="ltr">A link to the PDF version of the actual report
+(i.e. a link to “Download the report.”).</span></p>
+</li>
+<li>
+<p><span dir="ltr">Your home page should feature no more than
 five interactive tables and figures. If you want to include
 more to showcase your skills, we request you do so by adding
 extra pages to the website. We will only evaluate the homepage
 of the website.</span></p>
 <p>The actual analysis should be included in the PDF
 report. <strong>The PDF report can refer to visualizations included in the
-website</strong>.</p></li>
-</ol></li>
-<li><p><span dir="ltr"><strong>Upload everything</strong>, source code, website files,
-and PDF report, to the GitHub repository.</span></p></li>
-<li><p><span dir="ltr">Make sure that the <strong>website</strong>, which is to be
+website</strong>.</p>
+</li>
+</ol>
+</li>
+<li>
+<p><span dir="ltr"><strong>Upload everything</strong>, source code, website files,
+and PDF report, to the GitHub repository.</span></p>
+</li>
+<li>
+<p><span dir="ltr">Make sure that the <strong>website</strong>, which is to be
 <strong>hosted in GitHub pages</strong>, actually <strong>works</strong>, i.e., figures and
 interactive visualizations are properly rendered when visiting the
-website..</span></p></li>
-<li><p><span dir="ltr"><strong>Have a README.md file</strong> in the upper level of
+website..</span></p>
+</li>
+<li>
+<p><span dir="ltr"><strong>Have a README.md file</strong> in the upper level of
 the repository. This file provides general information about the
-project, like title, brief description, etc.</span></p></li>
-<li><p><span dir="ltr">The <strong>README.md file links to the website</strong>, e.g.
-<a href="https://username.github.io/pm566-project" class="uri">https://username.github.io/pm566-project</a>, .</span></p></li>
-<li><p><span dir="ltr">Have a <strong>“data” folder</strong> with either the data or
+project, like title, brief description, etc.</span></p>
+</li>
+<li>
+<p><span dir="ltr">The <strong>README.md file links to the website</strong>, e.g.
+
+<a href="https://username.github.io/pm566-project," target="_blank" rel="noopener">https://username.github.io/pm566-project,</a> .</span></p>
+</li>
+<li>
+<p><span dir="ltr">Have a <strong>“data” folder</strong> with either the data or
 instructions about how to acquire it. You should provide the
-instructions in a README.md within that folder.</span></p></li>
-<li><p><span dir="ltr"><strong>(optional)</strong> Your document is <strong>fully
+instructions in a README.md within that folder.</span></p>
+</li>
+<li>
+<p><span dir="ltr"><strong>(optional)</strong> Your document is <strong>fully
 reproducible</strong>, meaning you don’t have paths to files not shared
 in the repository. For example, if you are loading a dataset with
 “fread,” it should be something like
-“fread(“<a href="https://data.com/dataset.csv" class="uri">https://data.com/dataset.csv</a>”),” so you are directly
+“fread(“https://data.com/dataset.csv”),” so you are directly
 using data online, or “fread(“data/dataset.csv”),” so the data
 needed has been shared on GitHub and is contained in the path
-“data/dataset.csv.”</span></p></li>
+“data/dataset.csv.”</span></p>
+</li>
 </ol>
-</div>
-</div>
 
     </div>
 
