--- a/assignment/02-lab/index.html
+++ b/assignment/02-lab/index.html
@@ -32,7 +32,7 @@
   
   <meta name="description" content="Learning goals In this lab, you are expected to learn/put in practice the following skills:
  Forking a repository on GitHub Git workflow clone/commit/push Using pull requests (PR)  The last bit of the lab will deal with GitHub Classrooms. While this is not a fundamental tool for academia/industry, we will be using this tool throughout the course, meaning that your grade will depend on it :).
- Updating a single repo One of the most common tasks that people uses git for is for collaborating.">
+Updating a single repo One of the most common tasks that people uses git for is for collaborating.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://uscbiostats.github.io/PM566/assignment/02-lab/">
@@ -249,7 +249,7 @@
   <meta property="og:title" content="Lab 02 - GitHub | Introduction to Health Data Science - PM 566">
   <meta property="og:description" content="Learning goals In this lab, you are expected to learn/put in practice the following skills:
  Forking a repository on GitHub Git workflow clone/commit/push Using pull requests (PR)  The last bit of the lab will deal with GitHub Classrooms. While this is not a fundamental tool for academia/industry, we will be using this tool throughout the course, meaning that your grade will depend on it :).
- Updating a single repo One of the most common tasks that people uses git for is for collaborating."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
+Updating a single repo One of the most common tasks that people uses git for is for collaborating."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
   
     
@@ -525,11 +525,7 @@
   <div class="article-container">
 
     <div class="article-style">
-      
-
-
-<div id="learning-goals" class="section level1">
-<h1>Learning goals</h1>
+      <h1 id="learning-goals">Learning goals</h1>
 <p>In this lab, you are expected to learn/put in practice the following skills:</p>
 <ul>
 <li>Forking a repository on GitHub</li>
@@ -539,105 +535,122 @@
 <p>The last bit of the lab will deal with GitHub Classrooms. While this is not a
 fundamental tool for academia/industry, we will be using this tool throughout
 the course, meaning that your grade will depend on it :).</p>
-</div>
-<div id="updating-a-single-repo" class="section level1">
-<h1>Updating a single repo</h1>
+<h1 id="updating-a-single-repo">Updating a single repo</h1>
 <p>One of the most common tasks that people uses git for is for collaborating. While
 in general team members organize such that there is no overlapping editing of
 the files, <code>git</code> is (usually) smart enough to avoid clashes when multiple edits are done in
-the same document<a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a>. To show this, we will do a collaborative edit of
+the same document<sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup>. To show this, we will do a collaborative edit of
 a file!</p>
-<p>We will be working with the repository <a href="https://github.com/USCbiostats/PM566-whoami" class="uri">https://github.com/USCbiostats/PM566-whoami</a></p>
-<div id="step-1-fork-the-project-to-create-your-own-repo" class="section level2">
-<h2>Step 1: Fork the project to create your own repo</h2>
+<p>We will be working with the repository 
+<a href="https://github.com/USCbiostats/PM566-whoami" target="_blank" rel="noopener">https://github.com/USCbiostats/PM566-whoami</a></p>
+<h2 id="step-1-fork-the-project-to-create-your-own-repo">Step 1: Fork the project to create your own repo</h2>
 <p>Not a term/command actually available in Git, forking is a feature available in
-Github (as in other services) that allows users to create copies of other people’s
-projects to propose changes (i.e. make <strong>pull requests</strong>, i.e. “I have this
+Github (as in other services) that allows users to create copies of other people&rsquo;s
+projects to propose changes (i.e. make <strong>pull requests</strong>, i.e. &ldquo;I have this
 great update for your project! Would you like to add it by <em>pulling it</em> into your
-repo?”).</p>
+repo?&quot;).</p>
 <p>To start, you just need to use the Fork button available on the main page of the repository you would
-like to contribute to<a href="#fn2" class="footnote-ref" id="fnref2"><sup>2</sup></a>:</p>
-<p>Once you “Fork” a project, GitHub will:</p>
-<ol style="list-style-type: decimal">
-<li><p>Create a copy (using <code>git clone</code>) of that project in your account.</p></li>
-<li><p>Set up a pipeline to generate pull requests for the original repository.</p></li>
+like to contribute to<sup id="fnref:2"><a href="#fn:2" class="footnote-ref" role="doc-noteref">2</a></sup>:</p>
+<p>Once you &ldquo;Fork&rdquo; a project, GitHub will:</p>
+<ol>
+<li>
+<p>Create a copy (using <code>git clone</code>) of that project in your account.</p>
+</li>
+<li>
+<p>Set up a pipeline to generate pull requests for the original repository.</p>
+</li>
 </ol>
 <p>Once you have a copy of the project in your account, you can proceede by
-“downloading it” to your computer using the <code>git clone</code> command. For example, if
+&ldquo;downloading it&rdquo; to your computer using the <code>git clone</code> command. For example, if
 your github user name is <code>statsnerd</code> and the original repository is <code>PM566-whoami</code>, you could use the following in your command line</p>
-<pre class="shell"><code>cd where/you/want/to/download/the/thing
-git clone https://github.com/statsnerd/PM566-whoami.git</code></pre>
+<pre><code class="language-shell">cd where/you/want/to/download/the/thing
+git clone https://github.com/statsnerd/PM566-whoami.git
+</code></pre>
 <p>And if you have your ssh credentials set up, you can do instead</p>
-<pre class="shell"><code>cd where/you/want/to/download/the/thing
-git clone git@github.com:statsnerd/PM566-whoami.git</code></pre>
-<p>This way you will get a copy of the repository in your local machine. Now, let’s
+<pre><code class="language-shell">cd where/you/want/to/download/the/thing
+git clone git@github.com:statsnerd/PM566-whoami.git
+</code></pre>
+<p>This way you will get a copy of the repository in your local machine. Now, let&rsquo;s
 see how can we update the project!</p>
-</div>
-<div id="step-2-modifying-the-corresponding-line" class="section level2">
-<h2>Step 2: Modifying the corresponding line</h2>
+<h2 id="step-2-modifying-the-corresponding-line">Step 2: Modifying the corresponding line</h2>
 <p>If you got the correct copy, you should find a very simple repository with only
 two files: <code>CODE_OF_CONDUCT.md</code> and <code>README.md</code>. The first file is a general code of conduct for the project, which we do not need to edit. The second file
 is the one that we will be playing with. The README file, which happens to be
-a <a href="https://en.wikipedia.org/wiki/Markdown">Markdown</a> file, contains, or at least
-will contain, your and your team members’ biographies. Here is what you need to
+a 
+<a href="https://en.wikipedia.org/wiki/Markdown" target="_blank" rel="noopener">Markdown</a> file, contains, or at least
+will contain, your and your team members' biographies. Here is what you need to
 do:</p>
-<ol style="list-style-type: decimal">
-<li><p>Find the line with your name.</p></li>
-<li><p>In that single line (i.e. not spanning multiple lines), write something about
-yourself, e.g. “I am from XYZ, I love doing ABC, …”.</p></li>
-<li><p>(optional) if you feel like it, add at the end of the line a picture
+<ol>
+<li>
+<p>Find the line with your name.</p>
+</li>
+<li>
+<p>In that single line (i.e. not spanning multiple lines), write something about
+yourself, e.g. &ldquo;I am from XYZ, I love doing ABC, &hellip;&rdquo;.</p>
+</li>
+<li>
+<p>(optional) if you feel like it, add at the end of the line a picture
 of yourself (or avatar) using either html or markdown. This will require you
-to include the figure in the repo (if you are not linking a web fig).</p></li>
-<li><p>Commit the changes and push the changes to your repo using <code>git commit</code> and
-<code>git push</code>, e.g.</p></li>
+to include the figure in the repo (if you are not linking a web fig).</p>
+</li>
+<li>
+<p>Commit the changes and push the changes to your repo using <code>git commit</code> and
+<code>git push</code>, e.g.</p>
+</li>
 </ol>
-<pre class="sh"><code>git commit -a -m &quot;[A short but meaningful message]&quot;
+<pre><code class="language-sh">git commit -a -m &quot;[A short but meaningful message]&quot;
 # git add [your-avatar.png] ... if you need to add a picture
-git push</code></pre>
-<p>You are now one step closer to make your first “pull request”. We will see how
+git push
+</code></pre>
+<p>You are now one step closer to make your first &ldquo;pull request&rdquo;. We will see how
 that happens in the next part.</p>
-</div>
-<div id="step-3-do-the-pull-request" class="section level2">
-<h2>Step 3: Do the pull request</h2>
+<h2 id="step-3-do-the-pull-request">Step 3: Do the pull request</h2>
 <p>This is the final step. Overall, pull requests (PR) are as complex as the proposed
 changes are. The PR that you are about to make should go smoothly, yet, any time
 that you make a new PR, the changes should be able to be <code>merged</code> in the original
 repository without conflicts. Conflicts may only appear if the proposed changes
 are out-dated with respect to the main repository, meaning that the main repository
 was modified <em>after</em> your fork and your proposed changes cannot be merged without
-generating conflicts<a href="#fn3" class="footnote-ref" id="fnref3"><sup>3</sup></a>. For now, let’s just look at the simple case.</p>
+generating conflicts<sup id="fnref:3"><a href="#fn:3" class="footnote-ref" role="doc-noteref">3</a></sup>. For now, let&rsquo;s just look at the simple case.</p>
 <p>To create the PR, you just need to go to your online copy of the project and
-click on “Contribute” then “Open Pull Request”:</p>
+click on &ldquo;Contribute&rdquo; then &ldquo;Open Pull Request&rdquo;:</p>
 <figure>
 <img src="https://user-images.githubusercontent.com/893619/132388465-849ef04d-ad4f-4365-a646-27e88cb9d828.png" width="600px">
-<figcaption>
-You can submit pull requests to the original repo from your copy of it via the “Contribute” button.
-</figcaption>
+<figcaption>You can submit pull requests to the original repo from your copy of it via the "Contribute" button.</figcaption>
 </figure>
 <p>This will create a PR in the original repository. GitHub will automatically
 analyze the PR and check whether merging the PR to the master branch will result
 in a conflict or not. If all is OK, then the owner/admin of the repository can
-merge the PR. Otherwise, if there’s a conflict, you can go back to your local
+merge the PR. Otherwise, if there&rsquo;s a conflict, you can go back to your local
 repo, make the needed changes, commit the changes, and push the changes to
 your copy on GitHub. In this stage, the PR will automatically update to reflect
 the new changes you made in your copy of the project.</p>
-<p>For more information, check out <a href="https://help.github.com/en/github/collaborating-with-issues-and-pull-requests/creating-a-pull-request-from-a-fork">Creating a pull request from a fork</a>
+<p>For more information, check out 
+<a href="https://help.github.com/en/github/collaborating-with-issues-and-pull-requests/creating-a-pull-request-from-a-fork" target="_blank" rel="noopener">Creating a pull request from a fork
+</a>
 on GitHub.</p>
-</div>
-</div>
-<div class="footnotes footnotes-end-of-document">
-<hr />
+<section class="footnotes" role="doc-endnotes">
+<hr>
 <ol>
-<li id="fn1"><p>Team-members could be working on the same file but editing
+<li id="fn:1" role="doc-endnote">
+<p>Team-members could be working on the same file but editing
 different lines of code. If this is the case, after pull/push, git will integrate
-the changes without conflicts.<a href="#fnref1" class="footnote-back">↩︎</a></p></li>
-<li id="fn2"><p>For more details, take a look at the <a href="https://guides.github.com/activities/forking/">Forking Projects</a> article in GitHub guides.<a href="#fnref2" class="footnote-back">↩︎</a></p></li>
-<li id="fn3"><p>More info about how to deal with conflicts in this very neat
-post on stackoverflow.com <a href="https://stackoverflow.com/questions/161813/how-to-resolve-merge-conflicts-in-git?page=1&amp;tab=votes#tab-top">How to resolve merge conflicts in Git</a>.
+the changes without conflicts.&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
+</li>
+<li id="fn:2" role="doc-endnote">
+<p>For more details, take a look at the 
+<a href="https://guides.github.com/activities/forking/" target="_blank" rel="noopener">Forking Projects</a> article in GitHub guides.&#160;<a href="#fnref:2" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
+</li>
+<li id="fn:3" role="doc-endnote">
+<p>More info about how to deal with conflicts in this very neat
+post on stackoverflow.com 
+<a href="https://stackoverflow.com/questions/161813/how-to-resolve-merge-conflicts-in-git?page=1&amp;tab=votes#tab-top" target="_blank" rel="noopener">How to resolve merge conflicts in Git</a>.
 GitHub also has a way to solve conflicts in PRs, but this is only available to
-the admins of target repo. More info <a href="https://help.github.com/en/github/collaborating-with-issues-and-pull-requests/resolving-a-merge-conflict-on-github">here</a>,<a href="#fnref3" class="footnote-back">↩︎</a></p></li>
+the admins of target repo. More info 
+<a href="https://help.github.com/en/github/collaborating-with-issues-and-pull-requests/resolving-a-merge-conflict-on-github" target="_blank" rel="noopener">here</a>,&#160;<a href="#fnref:3" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
+</li>
 </ol>
-</div>
+</section>
 
     </div>
 
