--- a/assignment/09-hw3/index.html
+++ b/assignment/09-hw3/index.html
@@ -32,7 +32,7 @@
   
   <meta name="description" content="Due Date This assignment is due by midnight Pacific time, November 4, 2022
 The learning objectives are to conduct data scraping and perform text mining.
- APIs  Using the NCBI API, look for papers that show up under the term “sars-cov-2 trial vaccine.” Look for the data in the pubmed database, and then retrieve the details of the paper as shown in lab 7. How many papers were you able to find?">
+APIs   Using the NCBI API, look for papers that show up under the term &ldquo;sars-cov-2 trial vaccine.&rdquo; Look for the data in the pubmed database, and then retrieve the details of the paper as shown in lab 7. How many papers were you able to find?">
 
   
   <link rel="alternate" hreflang="en-us" href="https://uscbiostats.github.io/PM566/assignment/09-hw3/">
@@ -249,7 +249,7 @@ The learning objectives are to conduct data scraping and perform text mining.
   <meta property="og:title" content="Assignment 03 - Web Scraping and Text Mining | Introduction to Health Data Science - PM 566">
   <meta property="og:description" content="Due Date This assignment is due by midnight Pacific time, November 4, 2022
 The learning objectives are to conduct data scraping and perform text mining.
- APIs  Using the NCBI API, look for papers that show up under the term “sars-cov-2 trial vaccine.” Look for the data in the pubmed database, and then retrieve the details of the paper as shown in lab 7. How many papers were you able to find?"><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
+APIs   Using the NCBI API, look for papers that show up under the term &ldquo;sars-cov-2 trial vaccine.&rdquo; Look for the data in the pubmed database, and then retrieve the details of the paper as shown in lab 7. How many papers were you able to find?"><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
   
     
@@ -527,38 +527,36 @@ The learning objectives are to conduct data scraping and perform text mining.
   <div class="article-container">
 
     <div class="article-style">
-      
-
-
-<div id="due-date" class="section level2">
-<h2>Due Date</h2>
+      <h2 id="due-date">Due Date</h2>
 <p>This assignment is due by midnight Pacific time, November 4, 2022</p>
 <p>The learning objectives are to conduct data scraping and perform text mining.</p>
-</div>
-<div id="apis" class="section level2">
-<h2>APIs</h2>
+<h2 id="apis">APIs</h2>
 <ul>
-<li><p>Using the NCBI API, look for papers that show up under the term “sars-cov-2 trial vaccine.” Look for the data in the pubmed database, and then retrieve the details of the paper as shown in lab 7. How many papers were you able to find?</p></li>
-<li><p>Using the list of pubmed ids you retrieved, download each papers’ details using the query parameter rettype = abstract. If you get more than 250 ids, just keep the first 250.</p></li>
-<li><p>As we did in lab 7. Create a dataset containing the following:</p>
-<ol style="list-style-type: decimal">
+<li>
+<p>Using the NCBI API, look for papers that show up under the term &ldquo;sars-cov-2 trial vaccine.&rdquo; Look for the data in the pubmed database, and then retrieve the details of the paper as shown in lab 7. How many papers were you able to find?</p>
+</li>
+<li>
+<p>Using the list of pubmed ids you retrieved, download each papers' details using the query parameter rettype = abstract. If you get more than 250 ids, just keep the first 250.</p>
+</li>
+<li>
+<p>As we did in lab 7. Create a dataset containing the following:</p>
+<ol>
 <li>Pubmed ID number,</li>
 <li>Title of the paper,</li>
 <li>Name of the journal where it was published,</li>
 <li>Publication date, and</li>
 <li>Abstract of the paper (if any).</li>
-</ol></li>
+</ol>
+</li>
 </ul>
-</div>
-<div id="text-mining" class="section level2">
-<h2>Text Mining</h2>
-<p>A new dataset has been added to the data science data repository <a href="https://github.com/USCbiostats/data-science-data/tree/master/03_pubmed" class="uri">https://github.com/USCbiostats/data-science-data/tree/master/03_pubmed</a>. The dataset contains 3241 abstracts from articles across 5 search terms. Your job is to analyse these abstracts to find interesting insights.</p>
-<ol style="list-style-type: decimal">
+<h2 id="text-mining">Text Mining</h2>
+<p>A new dataset has been added to the data science data repository 
+<a href="https://github.com/USCbiostats/data-science-data/tree/master/03_pubmed" target="_blank" rel="noopener">https://github.com/USCbiostats/data-science-data/tree/master/03_pubmed</a>. The dataset contains 3241 abstracts from articles across 5 search terms. Your job is to analyse these abstracts to find interesting insights.</p>
+<ol>
 <li>Tokenize the abstracts and count the number of each token. Do you see anything interesting? Does removing stop words change what tokens appear as the most frequent? What are the 5 most common tokens for each search term after removing stopwords?</li>
 <li>Tokenize the abstracts into bigrams. Find the 10 most common bigram and visualize them with ggplot2.</li>
-<li>Calculate the TF-IDF value for each word-search term combination. (here you want the search term to be the “document”) What are the 5 tokens from each search term with the highest TF-IDF value? How are the results different from the answers you got in question 1?</li>
+<li>Calculate the TF-IDF value for each word-search term combination. (here you want the search term to be the &ldquo;document&rdquo;) What are the 5 tokens from each search term with the highest TF-IDF value? How are the results different from the answers you got in question 1?</li>
 </ol>
-</div>
 
     </div>
 
