--- a/assignment/09-lab/index.html
+++ b/assignment/09-lab/index.html
@@ -523,33 +523,26 @@
   <div class="article-container">
 
     <div class="article-style">
-      
-
-
-<div id="learning-goals" class="section level1">
-<h1>Learning goals</h1>
-<p>In this lab<a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a>, you are expected to learn/put in practice the following skills:</p>
+      <h1 id="learning-goals">Learning goals</h1>
+<p>In this lab<sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup>, you are expected to learn/put in practice the following skills:</p>
 <ul>
 <li>Evaluate whether a problem can be parallelized or not.</li>
 <li>Practice with the parallel package.</li>
 <li>Use Rscript to submit jobs</li>
 <li>Practice your skills with Git.</li>
 </ul>
-<div id="problem-1-think" class="section level2">
-<h2>Problem 1: Think</h2>
+<h2 id="problem-1-think">Problem 1: Think</h2>
 <p>Give yourself a few minutes to think about what you just learned. List three
 examples of problems that you believe may be solved using parallel computing,
 and check for packages on the HPC CRAN task view that may be related to it.</p>
-</div>
-<div id="problem-2-before-you" class="section level2">
-<h2>Problem 2: Before you</h2>
+<h2 id="problem-2-before-you">Problem 2: Before you</h2>
 <p>The following functions can be written to be more efficient without using
 parallel:</p>
-<ol style="list-style-type: decimal">
+<ol>
 <li>This function generates a <code>n x k</code> dataset with all its entries distributed
 poission with mean <code>lambda</code>.</li>
 </ol>
-<pre class="r"><code>fun1 &lt;- function(n = 100, k = 4, lambda = 4) {
+<pre><code class="language-r">fun1 &lt;- function(n = 100, k = 4, lambda = 4) {
   x &lt;- NULL
   
   for (i in 1:n)
@@ -566,15 +559,16 @@ fun1alt &lt;- function(n = 100, k = 4, lambda = 4) {
 microbenchmark::microbenchmark(
   fun1(),
   fun1alt()
-)</code></pre>
-<ol start="2" style="list-style-type: decimal">
+)
+</code></pre>
+<ol start="2">
 <li>Find the column max (hint: Checkout the function <code>max.col()</code>).</li>
 </ol>
-<pre class="r"><code># Data Generating Process (10 x 10,000 matrix)
+<pre><code class="language-r"># Data Generating Process (10 x 10,000 matrix)
 set.seed(1234)
 x &lt;- matrix(rnorm(1e4), nrow=10)
 
-# Find each column&#39;s max value
+# Find each column's max value
 fun2 &lt;- function(x) {
   apply(x, 2, max)
 }
@@ -587,18 +581,18 @@ fun2alt &lt;- function(x) {
 microbenchmark::microbenchmark(
   fun2(),
   fun2alt()
-)</code></pre>
-</div>
-<div id="problem-3-parallelize-everyhing" class="section level2">
-<h2>Problem 3: Parallelize everyhing</h2>
+)
+</code></pre>
+<h2 id="problem-3-parallelize-everyhing">Problem 3: Parallelize everyhing</h2>
 <p>We will now turn our attention to non-parametric
-<a href="https://en.wikipedia.org/wiki/Bootstrapping_(statistics)">bootstrapping</a>.
+
+<a href="https://en.wikipedia.org/wiki/Bootstrapping_%28statistics%29" target="_blank" rel="noopener">bootstrapping</a>.
 Among its many uses, non-parametric bootstrapping allow us to obtain confidence
 intervals for parameter estimates without relying on parametric assumptions.</p>
 <p>The main assumption is that we can approximate many experiments by resampling
 observations from our original dataset, which reflects the population.</p>
 <p>This function implements the non-parametric bootstrap:</p>
-<pre class="r"><code>my_boot &lt;- function(dat, stat, R, ncpus = 1L) {
+<pre><code class="language-r">my_boot &lt;- function(dat, stat, R, ncpus = 1L) {
   
   # Getting the random indices
   n &lt;- nrow(dat)
@@ -620,12 +614,13 @@ observations from our original dataset, which reflects the population.</p>
   
   ans
   
-}</code></pre>
-<ol style="list-style-type: decimal">
+}
+</code></pre>
+<ol>
 <li>Use the previous pseudocode, and make it work with parallel. Here is just an example
 for you to try:</li>
 </ol>
-<pre class="r"><code># Bootstrap of an OLS
+<pre><code class="language-r"># Bootstrap of an OLS
 my_stat &lt;- function(d) coef(lm(y ~ x, data=d))
 
 # DATA SIM
@@ -646,30 +641,31 @@ t(apply(ans1, 2, quantile, c(.025,.975)))
 ans0
 ##                  2.5 %     97.5 %
 ## (Intercept) -0.1379033 0.04797344
-## x            4.8650100 5.04883353</code></pre>
-<ol start="2" style="list-style-type: decimal">
+## x            4.8650100 5.04883353
+</code></pre>
+<ol start="2">
 <li>Check whether your version actually goes faster than the non-parallel version:</li>
 </ol>
-<pre class="r"><code>system.time(my_boot(dat = data.frame(x, y), my_stat, R = 4000, ncpus = 1L))
-system.time(my_boot(dat = data.frame(x, y), my_stat, R = 4000, ncpus = 2L))</code></pre>
-</div>
-<div id="problem-4-compile-this-markdown-document-using-rscript" class="section level2">
-<h2>Problem 4: Compile this markdown document using Rscript</h2>
+<pre><code class="language-r">system.time(my_boot(dat = data.frame(x, y), my_stat, R = 4000, ncpus = 1L))
+system.time(my_boot(dat = data.frame(x, y), my_stat, R = 4000, ncpus = 2L))
+</code></pre>
+<h2 id="problem-4-compile-this-markdown-document-using-rscript">Problem 4: Compile this markdown document using Rscript</h2>
 <p>Once you have saved this Rmd file, try running the following command
 in your terminal:</p>
-<pre class="bash"><code>Rscript --vanilla -e &#39;rmarkdown::render(&quot;[full-path-to-your-Rmd-file.Rmd]&quot;)&#39; &amp;</code></pre>
+<pre><code class="language-bash">Rscript --vanilla -e 'rmarkdown::render(&quot;[full-path-to-your-Rmd-file.Rmd]&quot;)' &amp;
+</code></pre>
 <p>Where <code>[full-path-to-your-Rmd-file.Rmd]</code> should be replace with the full path to
-your Rmd file… :).</p>
-</div>
-</div>
-<div class="footnotes footnotes-end-of-document">
-<hr />
+your Rmd file&hellip; :).</p>
+<section class="footnotes" role="doc-endnotes">
+<hr>
 <ol>
-<li id="fn1"><p>In Fall 2021 we realized there were a couple of typos in the
+<li id="fn:1" role="doc-endnote">
+<p>In Fall 2021 we realized there were a couple of typos in the
 pseudo-code, in particular, <code>fun1()</code> was not returning a value and <code>mi_stat</code>
-was replaces with <code>my_stat</code>.<a href="#fnref1" class="footnote-back">↩︎</a></p></li>
+was replaces with <code>my_stat</code>.&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
+</li>
 </ol>
-</div>
+</section>
 
     </div>
 
