--- a/assignment/11-hw4/index.html
+++ b/assignment/11-hw4/index.html
@@ -32,7 +32,7 @@
   
   <meta name="description" content="Due Date This assignment is due by midnight Pacific time, November 18, 2022
 The learning objectives are to conduct data scraping and perform text mining.
- HPC Problem 1: Make sure your code is nice Rewrite the following R functions to make them faster. It is OK (and recommended) to take a look at Stackoverflow and Google
+HPC Problem 1: Make sure your code is nice Rewrite the following R functions to make them faster. It is OK (and recommended) to take a look at Stackoverflow and Google
 # Total row sums fun1 &lt;- function(mat) { n &lt;- nrow(mat) ans &lt;- double(n) for (i in 1:n) { ans[i] &lt;- sum(mat[i, ]) } ans } fun1alt &lt;- function(mat) { # YOUR CODE HERE } # Cumulative sum by row fun2 &lt;- function(mat) { n &lt;- nrow(mat) k &lt;- ncol(mat) ans &lt;- mat for (i in 1:n) { for (j in 2:k) { ans[i,j] &lt;- mat[i, j] &#43; ans[i, j - 1] } } ans } fun2alt &lt;- function(mat) { # YOUR CODE HERE } # Use the data with this code set.">
 
   
@@ -250,7 +250,7 @@ The learning objectives are to conduct data scraping and perform text mining.
   <meta property="og:title" content="Assignment 04 - HPC and SQL | Introduction to Health Data Science - PM 566">
   <meta property="og:description" content="Due Date This assignment is due by midnight Pacific time, November 18, 2022
 The learning objectives are to conduct data scraping and perform text mining.
- HPC Problem 1: Make sure your code is nice Rewrite the following R functions to make them faster. It is OK (and recommended) to take a look at Stackoverflow and Google
+HPC Problem 1: Make sure your code is nice Rewrite the following R functions to make them faster. It is OK (and recommended) to take a look at Stackoverflow and Google
 # Total row sums fun1 &lt;- function(mat) { n &lt;- nrow(mat) ans &lt;- double(n) for (i in 1:n) { ans[i] &lt;- sum(mat[i, ]) } ans } fun1alt &lt;- function(mat) { # YOUR CODE HERE } # Cumulative sum by row fun2 &lt;- function(mat) { n &lt;- nrow(mat) k &lt;- ncol(mat) ans &lt;- mat for (i in 1:n) { for (j in 2:k) { ans[i,j] &lt;- mat[i, j] &#43; ans[i, j - 1] } } ans } fun2alt &lt;- function(mat) { # YOUR CODE HERE } # Use the data with this code set."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
   
@@ -529,20 +529,13 @@ The learning objectives are to conduct data scraping and perform text mining.
   <div class="article-container">
 
     <div class="article-style">
-      
-
-
-<div id="due-date" class="section level2">
-<h2>Due Date</h2>
+      <h2 id="due-date">Due Date</h2>
 <p>This assignment is due by midnight Pacific time, November 18, 2022</p>
 <p>The learning objectives are to conduct data scraping and perform text mining.</p>
-</div>
-<div id="hpc" class="section level2">
-<h2>HPC</h2>
-<div id="problem-1-make-sure-your-code-is-nice" class="section level3">
-<h3>Problem 1: Make sure your code is nice</h3>
+<h2 id="hpc">HPC</h2>
+<h3 id="problem--1-make-sure-your-code-is-nice">Problem  1: Make sure your code is nice</h3>
 <p>Rewrite the following R functions to make them faster. It is OK (and recommended) to take a look at Stackoverflow and Google</p>
-<pre class="r"><code># Total row sums
+<pre><code class="language-r"># Total row sums
 fun1 &lt;- function(mat) {
   n &lt;- nrow(mat)
   ans &lt;- double(n) 
@@ -588,41 +581,40 @@ microbenchmark::microbenchmark(
 microbenchmark::microbenchmark(
   fun2(dat),
   fun2alt(dat), unit = &quot;relative&quot;, check = &quot;equivalent&quot;
-)</code></pre>
+)
+</code></pre>
 <p>The last argument, check = “equivalent”, is included to make sure that the functions return the same result.</p>
-</div>
-<div id="problem-2-make-things-run-faster-with-parallel-computing" class="section level3">
-<h3>Problem 2: Make things run faster with parallel computing</h3>
+<h3 id="problem-2-make-things-run-faster-with-parallel-computing">Problem 2: Make things run faster with parallel computing</h3>
 <p>The following function allows simulating PI</p>
-<pre class="r"><code>sim_pi &lt;- function(n = 1000, i = NULL) {
+<pre><code class="language-r">sim_pi &lt;- function(n = 1000, i = NULL) {
   p &lt;- matrix(runif(n*2), ncol = 2)
   mean(rowSums(p^2) &lt; 1) * 4
 }
 
 # Here is an example of the run
 set.seed(156)
-sim_pi(1000) # 3.132</code></pre>
+sim_pi(1000) # 3.132
+</code></pre>
 <p>In order to get accurate estimates, we can run this function multiple times, with the following code:</p>
-<pre class="r"><code># This runs the simulation a 4,000 times, each with 10,000 points
+<pre><code class="language-r"># This runs the simulation a 4,000 times, each with 10,000 points
 set.seed(1231)
 system.time({
   ans &lt;- unlist(lapply(1:4000, sim_pi, n = 10000))
   print(mean(ans))
-})</code></pre>
+})
+</code></pre>
 <p>Rewrite the previous code using <code>parLapply()</code> to make it run faster. Make sure you set the seed using <code>clusterSetRNGStream()</code>:</p>
-<pre class="r"><code># YOUR CODE HERE
+<pre><code class="language-r"># YOUR CODE HERE
 system.time({
   # YOUR CODE HERE
   ans &lt;- # YOUR CODE HERE
   print(mean(ans))
   # YOUR CODE HERE
-})</code></pre>
-</div>
-</div>
-<div id="sql" class="section level2">
-<h2>SQL</h2>
+})
+</code></pre>
+<h2 id="sql">SQL</h2>
 <p>Setup a temporary database by running the following chunk</p>
-<pre class="r"><code># install.packages(c(&quot;RSQLite&quot;, &quot;DBI&quot;))
+<pre><code class="language-r"># install.packages(c(&quot;RSQLite&quot;, &quot;DBI&quot;))
 
 library(RSQLite)
 library(DBI)
@@ -638,25 +630,18 @@ category &lt;- read.csv(&quot;https://raw.githubusercontent.com/ivanceras/sakila
 # Copy data.frames to database
 dbWriteTable(con, &quot;film&quot;, film)
 dbWriteTable(con, &quot;film_category&quot;, film_category)
-dbWriteTable(con, &quot;category&quot;, category)</code></pre>
-<p>When you write a new chunk, remember to replace the <code>r</code> with <code>sql, connection=con</code>. Some of these questions will reqruire you to use an inner join. Read more about them here <a href="https://www.w3schools.com/sql/sql_join_inner.asp" class="uri">https://www.w3schools.com/sql/sql_join_inner.asp</a></p>
-</div>
-<div id="question-1" class="section level2">
-<h2>Question 1</h2>
+dbWriteTable(con, &quot;category&quot;, category)
+</code></pre>
+<p>When you write a new chunk, remember to replace the <code>r</code> with <code>sql, connection=con</code>. Some of these questions will reqruire you to use an  inner join. Read more about them here 
+<a href="https://www.w3schools.com/sql/sql_join_inner.asp" target="_blank" rel="noopener">https://www.w3schools.com/sql/sql_join_inner.asp</a></p>
+<h2 id="question-1">Question 1</h2>
 <p>How many many movies is there avaliable in each <code>rating</code> catagory.</p>
-</div>
-<div id="question-2" class="section level2">
-<h2>Question 2</h2>
+<h2 id="question-2">Question 2</h2>
 <p>What is the average replacement cost and rental rate for each <code>rating</code> category.</p>
-</div>
-<div id="question-3" class="section level2">
-<h2>Question 3</h2>
+<h2 id="question-3">Question 3</h2>
 <p>Use table <code>film_category</code> together with <code>film</code> to find the how many films there are witth each category ID</p>
-</div>
-<div id="question-4" class="section level2">
-<h2>Question 4</h2>
+<h2 id="question-4">Question 4</h2>
 <p>Incorporate table <code>category</code> into the answer to the previous question to find the name of the most popular category.</p>
-</div>
 
     </div>
 
